--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   get: ^4.6.6
   http: ^1.2.0
   dio: ^5.4.0
+  supabase_flutter: ^2.10.3
+  flutter_dotenv: ^6.0.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -54,11 +57,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/env/.env
+    - assets/logo/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  
+
   fonts:
     - family: Poppins
       fonts:
